<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">微银支付</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="t">
        <item>提示</item>
        <item>确定退出</item>
        <item>确定</item>
        <item>取消</item>
    </string-array>
    <string name="url">http://192.168.0.233:8080/wyw/</string>
    <string name="wangji">忘记密码？点击这里</string>
    <string name="kuaisu">快速找回</string>
    <string name="kuaisudenglu">快速注册</string>
    <string name="denglu">登录</string>
    <string name="wodwezhanghu">我的账户</string>
    <string name="tuichu">退出</string>
    <string name="shouye">首页</string>
    <string name="genduo">更多</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_phone">请输入手机号</string>
    <string-array name="body_array">
        <item>交易记录</item>
        <item>刷卡付款</item>
        <item>我要提款</item>
        <item>微信付款</item>
        <item>VIP申请</item>
        <item>实名认证</item>
        <item>支付宝付款</item>
        <item>修改密码</item>
        <item>申请代理</item>
        <item>手机充值</item>
        <item>分享</item>
        <item>生活缴费</item>
        <item>流量充值</item>
        <item>加油卡</item>
        <item>好友转账</item>
        <item>快速入门</item>
        <item >信用卡还款</item>
    </string-array>
    <string-array name="bankarray">
        <item>成都银行</item>
        <item>中国工商银行</item>
        <item>华夏银行</item>
        <item>光大银行</item>
        <item>广东发展银行</item>
        <item>中国建设银行</item>
        <item>中国交通银行</item>
        <item>中国民生银行</item>
        <item>中国农业银行</item>
        <item>中国农村信用社</item>
        <item>中国平安银行</item>
        <item>上海浦东银行</item>
        <item>上海银行</item>
        <item>深圳发展银行</item>
        <item>招商银行</item>
        <item>中国银行</item>
        <item>中国邮政银行</item>
        <item>中信银行</item>
        <item>兴业银行</item>
    </string-array>
    <string-array name="sichuan">
        <item>成都市</item>
        <item>自贡市</item>
        <item>攀枝花市</item>
        <item>泸州市</item>
        <item>德阳市</item>
        <item>绵阳市</item>
        <item>广元市</item>
        <item>遂宁市</item>
        <item>内江市</item>
        <item>乐山市</item>
        <item>南充市</item>
        <item>眉山市</item>
        <item>宜宾市</item>
        <item>广安市</item>
        <item>达州市</item>
        <item>雅安市</item>
        <item>巴中市</item>
        <item>资阳市</item>
        <item>阿坝藏族羌族自治州</item>
        <item>甘孜藏族自治州</item>
        <item>凉山彝族自治州</item>
    </string-array>
    <string-array name="beijing">
        <item>东城区</item>
        <item>西城区</item>
        <item>海淀区</item>
        <item>朝阳区</item>
        <item>丰台区</item>
        <item>石景山区</item>
        <item>通州区</item>
        <item>顺义区</item>
        <item>房山区</item>
        <item>大兴区</item>
        <item>昌平区</item>
        <item>怀柔区</item>
        <item>平谷区</item>
        <item>门头沟区</item>
        <item>密云县</item>
        <item>延庆县</item>
    </string-array>
    <string-array name="tianjin">
        <item>和平区</item>
        <item>河西区</item>
        <item>河北区</item>
        <item>河东区</item>
        <item>南开区</item>
        <item>红桥区</item>
        <item>东丽区</item>
        <item>西青区</item>
        <item>津南区</item>
        <item>北辰区</item>
    </string-array>
    <string-array name="shanghai">
        <item>浦东新区</item>
        <item>徐汇区</item>
        <item>长宁区</item>
        <item>普陀区</item>
        <item>闸北区</item>
        <item>虹口区</item>
        <item>杨浦区</item>
        <item>黄浦区</item>
        <item>卢湾区</item>
        <item>静安区</item>
        <item>宝山区</item>
        <item>闵行区</item>
        <item>嘉定区</item>
        <item>金山区</item>
        <item>松江区</item>
        <item>青浦区</item>
        <item>南汇区</item>
        <item>奉贤区</item>
    </string-array>
    <string-array name="chongqing">
        <item>渝中区</item>
        <item>沙坪坝区</item>
        <item>江北区</item>
        <item>南岸区</item>
        <item>大渡口区</item>
        <item>九龙坡区</item>
        <item>渝北区</item>
        <item>巴南区</item>
        <item>北碚区</item>
        <item>万州区</item>
        <item>涪陵区</item>
        <item>长寿区</item>
        <item>合川区</item>
        <item>南川区</item>
        <item>永川区</item>
        <item>江津区</item>
        <item>大足区</item>
        <item>綦江区</item>
        <item>黔江区</item>
    </string-array>
    <string-array name="hebei">
        <item>邯郸市</item>
        <item>张家口市</item>
        <item>承德市</item>
        <item>保定市</item>
        <item>石家庄市</item>
        <item>唐山市</item>
        <item>廊坊市</item>
        <item>沧州市</item>
        <item>衡水市</item>
        <item>邢台市</item>
        <item>秦皇岛市</item>
    </string-array>
    <string-array name="sanxi">
        <item>太原市</item>
        <item>大同市</item>
        <item>朔州市</item>
        <item>阳泉市</item>
        <item>长治市</item>
        <item>晋城市</item>
        <item>忻州市</item>
        <item>晋中市</item>
        <item>临汾市</item>
        <item>运城市</item>
        <item>吕梁市</item>
    </string-array>
    <string-array name="neimenggu">
        <item>呼伦贝尔市</item>
        <item>通辽市</item>
        <item>赤峰市</item>
        <item>乌兰察布市</item>
        <item>呼和浩特市</item>
        <item>包头市</item>
        <item>巴彦淖尔市</item>
        <item>鄂尔多斯市</item>
        <item>乌海市</item>
        <item>阿拉善盟市</item>
    </string-array>
    <string-array name="liaoning">
        <item>沈阳市</item>
        <item>大连市</item>
        <item>鞍山市</item>
        <item>抚顺市</item>
        <item>本溪市</item>
        <item>丹东市</item>
        <item>锦州市</item>
        <item>营口市</item>
        <item>阜新市</item>
        <item>辽阳市</item>
        <item>盘锦市</item>
        <item>铁岭市</item>
        <item>朝阳市</item>
        <item>葫芦岛市</item>
    </string-array>
    <string-array name="jilin">
        <item>长春市</item>
        <item>吉林市</item>
        <item>辽源市</item>
        <item>松原市</item>
        <item>白城市</item>
        <item>四平市</item>
        <item>延吉市</item>
        <item>白山市</item>
        <item>通化市</item>
    </string-array>
    <string-array name="heilongjiang">
        <item>哈尔滨市</item>
        <item>齐齐哈尔市</item>
        <item>佳木斯市</item>
        <item>鹤岗市</item>
        <item>大庆市</item>
        <item>鸡西市</item>
        <item>双鸭山市</item>
        <item>伊春市</item>
        <item>牡丹江市</item>
        <item>黑河市</item>
        <item>七台河市</item>
        <item>绥化市和大兴安岭地区</item>
        <item>绥化市</item>
    </string-array>
    <string-array name="jiangsu">
        <item>南京市</item>
        <item>苏州市</item>
        <item>无锡市</item>
        <item>常州市</item>
        <item>扬州市</item>
        <item>镇江市</item>
        <item>南通市</item>
        <item>徐州市</item>
        <item>泰州市</item>
        <item>盐城市</item>
        <item>淮安市</item>
        <item>连云港市</item>
        <item>宿迁市</item>
    </string-array>
    <string-array name="zhejiang">
        <item>杭州市</item>
        <item>宁波市</item>
        <item>温州市</item>
        <item>绍兴市</item>
        <item>湖州市</item>
        <item>嘉兴市</item>
        <item>金华市</item>
        <item>衢州市</item>
        <item>舟山市</item>
        <item>台州市</item>
        <item>丽水市</item>
    </string-array>
    <string-array name="anhui">
        <item>合肥市</item>
        <item>芜湖市</item>
        <item>马鞍山市</item>
        <item>铜陵市</item>
        <item>池州市</item>
        <item>宣城市</item>
        <item>黄山市</item>
        <item>巢湖市</item>
        <item>六安市</item>
        <item>安庆市</item>
        <item>淮南市</item>
        <item>淮北市</item>
        <item>蚌埠市</item>
        <item>阜阳市</item>
        <item>宿州市</item>
        <item>亳州市</item>
        <item>滁州市</item>
    </string-array>
    <string-array name="hujian">
        <item>福州市</item>
        <item>厦门市</item>
        <item>泉州市</item>
        <item>龙岩市</item>
        <item>南平市</item>
        <item>宁德市</item>
        <item>莆田市</item>
        <item>三明市</item>
        <item>漳州市</item>
    </string-array>
    <string-array name="jiangxi">
        <item>南昌市</item>
        <item>九江市</item>
        <item>赣州市</item>
        <item>上饶市</item>
        <item>宜春市</item>
        <item>景德镇市</item>
        <item>抚州市</item>
        <item>吉安市</item>
        <item>新余市</item>
        <item>鹰潭市</item>
        <item>萍乡市</item>
    </string-array>
    <string-array name="shandong">
        <item>济南</item>
        <item>青岛市</item>
        <item>德州市</item>
        <item>济宁市</item>
        <item>莱芜市</item>
        <item>日照市</item>
        <item>济宁市</item>
        <item>泰安市</item>
        <item>烟台市</item>
        <item>威海市</item>
        <item>菏泽市</item>
        <item>滨州市</item>
        <item>临沂市</item>
        <item>枣庄市</item>
        <item>聊城市</item>
        <item>莱芜市</item>
        <item>东营市</item>
    </string-array>
    <string-array name="henan">
        <item>郑州市</item>
        <item>开封市</item>
        <item>平顶山市</item>
        <item>焦作市</item>
        <item>鹤壁市</item>
        <item>新乡市</item>
        <item>安阳市</item>
        <item>濮阳市</item>
        <item>许昌市</item>
        <item>漯河市</item>
        <item>三门峡市</item>
        <item>南阳市</item>
        <item>商丘市</item>
        <item>信阳市</item>
        <item>周口市</item>
        <item>驻马店市</item>
        <item>济源市</item>
    </string-array>
    <string-array name="hubei">
        <item>武汉市</item>
        <item>黄石市</item>
        <item>十堰市</item>
        <item>荆州市</item>
        <item>宜昌市</item>
        <item>襄樊市</item>
        <item>鄂州市</item>
        <item>荆门市</item>
        <item>黄冈市</item>
        <item>孝感市</item>
        <item>咸宁市</item>
        <item>仙桃市</item>
        <item>潜江市</item>
        <item>恩施州</item>
        <item>天门市</item>
        <item>随州市</item>
        <item>恩施州市</item>
    </string-array>
    <string-array name="hunan">
        <item>长沙市</item>
        <item>常德市</item>
        <item>郴州市</item>
        <item>衡阳市</item>
        <item>怀化市</item>
        <item>娄底市</item>
        <item>邵阳市</item>
        <item>湘潭市</item>
        <item>益阳市</item>
        <item>永州市</item>
        <item>岳阳市</item>
        <item>张家界市</item>
        <item>株洲市</item>
        <item>湘西土家族苗族自治州</item>
        <item>耒阳市</item>
    </string-array>
    <string-array name="guangdong">
        <item>珠海市</item>
        <item>汕头市</item>
        <item>佛山市</item>
        <item>韶关市</item>
        <item>湛江市</item>
        <item>肇庆市</item>
        <item>江门市</item>
        <item>茂名市</item>
        <item>惠州市</item>
        <item>梅州市</item>
        <item>汕尾市</item>
        <item>河源市</item>
        <item>阳江市</item>
        <item>清远市</item>
        <item>东莞市</item>
        <item>中山市</item>
        <item>潮州市</item>
        <item>揭阳市</item>
        <item>云浮市</item>
    </string-array>
    <string-array name="hainan">
        <item>海口市</item>
        <item>三亚市</item>
        <item>万宁市</item>
        <item>琼海市</item>
        <item>文昌市</item>
        <item>儋州市</item>
        <item>东方市</item>
        <item>五指山市</item>
        <item>定安县</item>
        <item>乐东县</item>
        <item>澄迈县</item>
        <item>屯昌县</item>
        <item>临高县</item>
        <item>白沙黎族自治县</item>
        <item>保亭黎苗族自治县</item>
        <item>陵水黎族自治县</item>
        <item>琼中黎苗族自治县</item>
        <item>昌江黎族自治县</item>
    </string-array>
    <string name="addcard">添加银行卡账户</string>
    <string name="nocard1">需绑定银行卡</string>
    <string name="nocard">提款人信息填写</string>
    <string name="input_cardid">请输入卡号/刷卡获取卡号</string>
    <string name="next">下一步</string>
    <string name="ucard">持卡人</string>
    <string name="dear">尊敬的</string>
    <string name="bind_text">,您的银行卡信息如下：</string>
    <string name="bind_bank">银行机构</string>
    <string name="ok">确认</string>
    <string name="bind_ok">确认绑定</string>
    <string name="set_amount">输入金额</string>
    <string name="get_info">获取装置信息</string>
    <string name="start_connection">开始连接</string>
    <string name="stop_connection">停止连接</string>
    <string name="start">开始</string>
    <string name="enable_input_amount">启用金额输入模式</string>
    <string name="inject_session_key">灌入会议金钥</string>
    <string name="encrypt_data">加密资料</string>
</resources>