<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
	<RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:background="@drawable/danghangklanbj"
        >
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_ok"    
        android:textSize="@dimen/titlesize"
        android:textColor="#ffffff"
        android:layout_centerInParent="true"
            />
        <LinearLayout 
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:id="@+id/bind_back"
        android:gravity="center_vertical"    
            >
        <ImageView 
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:src="@drawable/back"
            />    
        </LinearLayout>
    </RelativeLayout>    
	<LinearLayout 
	   	android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="1" 
        android:orientation="vertical"
        android:background="#eee"
	    >
	    <LinearLayout 
	    android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="2.1" 
        android:orientation="horizontal" 
        android:gravity="center_vertical"  
        android:paddingLeft="18dp" 
        android:paddingRight="17dp"
	        >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/dear"
	        />
		<TextView 
		    android:id="@+id/bind_phone"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:textColor="#FD9144"
	        android:textSize="14sp"
	        /> 
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/bind_text"
	        />        
	    </LinearLayout>
	    <LinearLayout 
	    android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="2.2"   
        android:orientation="horizontal"
        android:background="@drawable/account_bg3"  
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
	        >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_weight="2"
	        android:text="@string/bind_bank"
	        android:textSize="16sp"
	        />
	    <ImageView 
	        android:id="@+id/bindok_img"
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_marginRight="20dp"
		    />
	    <TextView
	        android:id="@+id/bind_bank" 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:gravity="center_vertical|end"
	        android:layout_marginRight="10dp"
	        />
	    </LinearLayout>
	    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="1.95"
	    android:layout_marginTop="15dp"
	    android:background="#fff"
	    android:paddingLeft="20dp"
	    android:paddingRight="10dp"
		android:orientation="vertical"	    
	    >
	    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:background="#fff"
	    android:orientation="horizontal"
	    >
	    <TextView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="5" 
	    android:text="@string/ucard"
	    android:textColor="#666"
	    android:textSize="14sp" 
	    android:gravity="center_vertical"
	    android:singleLine="true"
	        />
	    <TextView
	    android:id="@+id/bind_name" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="2" 
	    android:textColor="#666"
	    android:textSize="14sp" 
	    android:gravity="center_vertical|end"
	    android:singleLine="true"
	    android:layout_marginRight="20dp"
	        />
	</LinearLayout>
	<ImageView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/long_line"
	    android:layout_marginRight="20dp"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:background="#fff"
	    android:orientation="horizontal"
	    >
	    <TextView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="5" 
	    android:text="银行卡号"
	    android:textColor="#666"
	    android:textSize="14sp"
	    android:gravity="center_vertical"
	    android:singleLine="true"
	        />
	    <TextView
	    android:id="@+id/bind_number" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="2" 
	    android:textColor="#666"
	    android:textSize="14sp" 
	    android:gravity="center_vertical|end"
	    android:singleLine="true"
	    android:layout_marginRight="20dp"
	        />
	</LinearLayout>
	</LinearLayout>
	    <LinearLayout 
	    android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="1" 
        android:padding="20dp"    
	        >
	        <Button 
            android:id="@+id/bind_ok"
            android:layout_width="match_parent"
        	android:layout_height="@dimen/oknext" 
        	android:text="@string/ok"
        	android:textColor="#ffffff"
        	android:textSize="18sp"
        	android:background="@drawable/buttonselector"
                />
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
