<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:background="@drawable/danghangklanbj"
        >
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcard"    
        android:textSize="@dimen/titlesize"
        android:textColor="#ffffff"
        android:layout_centerInParent="true"
            />
        <LinearLayout 
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:id="@+id/add_back"
        android:gravity="center_vertical"
            >
        <ImageView 
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:src="@drawable/back"
            />    
        </LinearLayout>
    </RelativeLayout>
	<LinearLayout 
	   	android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="1" 
        android:orientation="vertical"
        android:background="#eee"
	    >
	    <LinearLayout 
	    android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="2.1" 
        android:orientation="horizontal" 
        android:gravity="center_vertical"  
        android:paddingLeft="20dp" 
        android:paddingRight="20dp"
        android:layout_marginTop="12dp"
	        >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/nocard1"
	        android:textSize="12sp"
	        />        
	    </LinearLayout>
	    <LinearLayout 
	    android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="2.2"   
        android:orientation="horizontal"
        android:paddingLeft="20dp" 
        android:paddingRight="20dp"
        android:gravity="center_vertical"
	        >
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_weight="1"
	        android:text="@string/nocard"
	        android:textSize="14sp"
	        />
	    </LinearLayout>
	    <LinearLayout 
	    android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="2.12"  
        android:orientation="horizontal"
        android:background="@drawable/account_bg3"  
        android:paddingLeft="20dp" 
        android:paddingRight="20dp"
        android:gravity="center_vertical"
	        >
	       <TextView
	        android:id="@+id/add_name"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:textSize="13sp"
	        android:background="@null"
	        android:layout_weight="1"
	        android:singleLine="true"
	        android:gravity="center_vertical"
	        />
	    </LinearLayout>
	    <ImageView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        />
	    <LinearLayout 
	    android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="2.05"  
        android:orientation="horizontal"
        android:background="@drawable/account_bg3"    
        android:paddingLeft="20dp" 
        android:paddingRight="20dp"
        android:gravity="center_vertical" 
        android:layout_marginTop="10dp"   
	        >
	        <EditText 
	        android:id="@+id/add_number"
	        android:layout_height="match_parent"
	        android:layout_width="match_parent"
	        android:layout_weight="1"
	        android:hint="@string/input_cardid"
	        android:textSize="13sp"
	        android:gravity="center_vertical"
	        android:background="@null"
	        android:maxLength="19"
	        android:singleLine="true"
	        android:inputType="numberSigned"
	        />
			<ImageView
			android:id="@+id/add_clear"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
			android:layout_weight="4"
			android:src="@drawable/cha"	 
			android:visibility="gone" 
	           />
	    <ImageView
	        android:id="@+id/slot_card"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
	        android:gravity="end"
	        android:src="@drawable/card" 
	        />
 
	    </LinearLayout>
	    <LinearLayout 
	    android:layout_width="match_parent"
       	android:layout_height="match_parent"
        android:layout_weight="0.8" 
        android:padding="20dp"    
	        >
	        <Button 
            android:id="@+id/add_next"
            android:layout_width="match_parent"
        	android:layout_height="@dimen/oknext" 
        	android:text="@string/next"
        	android:textColor="#ffffff"
        	android:textSize="18sp"
        	android:background="@drawable/buttonselector"
                />
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
