<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/danghangklanbj" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="蓝牙付款"
            android:textColor="#ffffff"
            android:textSize="@dimen/titlesize" />

        <LinearLayout
            android:id="@+id/pay_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:src="@drawable/back" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/fidSpinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/oknext"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/buttonselector"
            android:text="@string/start"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:editable="false"
            android:gravity="center" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/statusEditText"
            android:layout_width="fill_parent"
            android:layout_height="167dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:editable="false"
            android:ems="10" />
    </LinearLayout>

    <Button
        android:id="@+id/stop_connection"
        android:layout_width="80dp"
        android:layout_height="@dimen/oknext"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/buttonselector"
        android:text="@string/stop_connection"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/start_connection"
        android:layout_width="80dp"
        android:layout_height="@dimen/oknext"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:background="@drawable/buttonselector"
        android:text="@string/start_connection"
        android:textColor="#ffffff"
        android:textSize="18sp" />

      <Button
          android:id="@+id/Amount_money"
          android:layout_width="80dp"
          android:layout_height="@dimen/oknext"
          android:layout_alignTop="@+id/stop_connection"
          android:layout_centerHorizontal="true"
          android:background="@drawable/buttonselector"
          android:text="@string/set_amount"
          android:textColor="#ffffff"
          android:textSize="18sp" />

</RelativeLayout>